[package]
name = "CoinbaseCommerce_rust"
version = "0.0.1"
edition = "2021"
authors = ["Raj <floatraj@gmail.com>"]
repository = "https://github.com/OutOfBoundCats/CoinbaseCommerce_rust.git"
description = "A WIP Coinbase commerce SDK for Rust"
license = "MIT"
keywords = ["Coinbase", "Coinbase_Commerce"]
categories = ["api-bindings"]
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
